change date formate to yyyyMMdd